--- a/app/assets/stylesheets/components/signup_form.scss
+++ b/app/assets/stylesheets/components/signup_form.scss
@@ -562,10 +562,10 @@
   padding-top: 28px;
   padding-left: 104px;
   width: 28px;
-  -webkit-transition: all 1s linear;
-  -moz-transition: all 1s linear;
-  -o-transition: all 1s linear;
-  transition: all 1s linear;
+  // -webkit-transition: all 1s linear;
+  // -moz-transition: all 1s linear;
+  // -o-transition: all 1s linear;
+  // transition: all 1s linear;
 
   @media (max-width: 1160px) {
     padding-top: 8px;
